# Poseidon

./: .gitignore  .gitmodules  DepthSensor.cpp  MainPage.dox  README.md  SubTestFuncs.rb  Version.dox  init.sh  kernelDev.rb  main.rb  ruby.dox  rubyDev.rb  run.sh  runKernelDev.sh  runRubyDev.sh  runStable.sh  stable.rb
API/: APIWrapper.cpp  CMakeLists.txt  ClangCompile.sh  DiveMaster.cpp  PoseidonAPI  ThrustControlWrapper.cpp  clean.sh  compile.sh  compileRun.sh  extconf.rb  extconfClang.rb  extconfGCC.rb  fixMakefile.sh  main.cpp  temp
API/API/: DivingMaster.cpp  DivingMaster.h  IMUSensor.cpp  IMUSensor.h  PowerManagement.cpp  PowerManagement.h  SubmarineSensors.cpp  SubmarineSensors.h  ThrustController.cpp  ThrustController.h
API/drivers/: I2C.cpp  PWM.cpp  Registry.cpp  Registry.h  Vector3D.cpp  Vector3D.h
API/drivers/IMU/: BMP085.cpp  BMP085.h  MPU6050.h
API/drivers/PWM/: PWM_Const.h
API/drivers/PowerModule/: CMPR.cpp  CMPR.h  CMPR_Const.h  Nano.ino
BoneCentral/Peripherals/: CMakeLists.txt  main.cpp
BoneCentral/Peripherals/Peripherals.Api/: CMakeLists.txt  IController.hpp
BoneCentral/Peripherals/Peripherals.Assembler/: CMakeLists.txt
BoneCentral/Peripherals/Peripherals.Core/: CMakeLists.txt
BoneCentral/Peripherals/Peripherals.I2CAdaptors/: CMakeLists.txt
BoneCentral/Peripherals/Peripherals.SerialAdaptors/: CMakeLists.txt
BoneCentral/Peripherals/Peripherals.Sockets/: CMakeLists.txt
BoneCentral/Peripherals/Perpherals.Core.UnitTests/: CMakeLists.txt
Libraries/MockDrivers/: CMakeLists.txt
Libraries/Sockets/: CMakeLists.txt  compileSockets.sh
Libraries/Sockets/include/: TcpClient.h
Libraries/Sockets/src/: SocketServer.cpp  TcpClient.cpp
Main/Peripherals/: CMakeLists.txt
Main/Peripherals/API/: PowerManagement.cpp  PowerManagement.h  ThrustController.h
Main/Peripherals/drivers/: Registry.h
Main/Peripherals/include/: IMUSensor.h  ThrustController.h
Main/Peripherals/src/: Bootstrap.cpp  IMUSensor.cpp  PowerManagement.cpp  ThrustController.cpp
PiCentral/: CMakeLists.txt  test_main.cpp
PiCentral/include/: Capture.hpp  GateDetector.hpp
PiCentral/src/: Capture.cpp  GateDetector.cpp  main.cpp
PiVision/: CMakeLists.txt  PoleHsv.json  gateBuild.sh  gateDetectorMain.cpp
PiVision/Experimental/Gate Detection/: Main.cpp
PiVision/VisionOld/: Houghcircles.cpp
PiVision/include/: Capture.h  GateDetector.h
PiVision/src/: Capture.cpp  GateDetector.cpp
SLAM/: .gitignore  CMakeLists.txt  INSTALLING_CMAKE.md  INSTALLING_OPENCV.md  README.md  catch.cmake  dso.cmake  macros.cmake  opencv.cmake
SLAM/include/: CameraFrame.h  DSOcollector.h  DSOcollector.hpp  DSOtelemetryProvider.h  DepthMap.h  DepthMap.hpp  IFrameStream.h  Observable.h  Pose.h  QuaternionFactory.h  RGBColor.h  TelemetryPacket.h  _extras.h  _tmp.h  _types.h  location_interface.hpp  structDepthMap.hpp
SLAM/include/camera_frame/: ColorSpace.h  GrayscaleCameraFrame.h  ICameraFrame.h  ICameraFrameCVMatBased.h  RGBCameraFrame.h  RGBColor.h  TCameraFrame.h
SLAM/include/camera_frame_stream/: CVFrameStream.h  IFrameStream.h
SLAM/include/telemetry/: DepthMap.h  Pose.h  TelemetryListener.h  TelemetryPacket.h  TelemetryProvider.h  TelemetryService.h
SLAM/src/: CVFrameStream.cpp  CameraFrame.cpp  DSOcollector.cpp  DSOtelemetryProvider.cpp  DepthMap.cpp  GrayscaleCameraFrame.cpp  ICameraFrame.cpp  ICameraFrameCVMatBased.cpp  QuaternionFactory.cpp  RGBCameraFrame.cpp  TelemetryProvider.cpp  TelemetryService.cpp  camera_calibration.cpp  location_interface.cpp  main.cpp  slam.h  structDepthMap.cpp
SLAM/src/camera/: CameraFrame.hpp  ICameraFrameGenerator.h
SLAM/src/depth/: DepthMap.hpp  IDepthMapGenerator.h
SLAM/src/pose/: IPoseGenerator.h  Pose.hpp
SLAM/src/telemetry/: TelemetryPacket.hpp  TelemetryProvider.cpp  TelemetryProvider.h
SLAM/test/: CameraFrameTest.cpp  DSOcollectorTest.cpp  DSOtelemetryProviderTest.cpp  TelemetryPacketTest.cpp  _config.h.in  _test_main.cpp  testDepthMap.cpp  test_main.cpp  teststructDepthMap.cpp
SLAM/test/camera_frame/: GrayscaleCameraFrameRealFilesTest.cpp  GrayscaleCameraFrameTest.cpp  RGBCameraFrameRealFilesTest.cpp  RGBCameraFrameTest.cpp
SLAM/test/camera_frame_stream/: CVFrameStreamTest.cpp
SLAM/test/telemetry/: DepthMapTest.cpp  TelemetryPacketTest.cpp  TelemetryProviderTest.cpp  TelemetryServiceTest.cpp
SLAM/test_resources/: testCameraCalib.txt
SOS/: CMakeLists.txt  README.md  main.cpp
SOS/Connections/include/: Loopback.hpp
SOS/Connections/src/: Loopback.cpp  Loopback.spec.cpp
SOS/Core/include/: ClusterConfig.hpp  ClusterConfig.mock.hpp  ClusterConfigFactory.hpp  Connection.hpp  Hub.hpp  HubFactory.hpp  IHub.hpp  NetworkNode.hpp  Node.hpp  Pipe.hpp  Pipe.mock.hpp  PipeFactory.hpp  PipeFactory.mock.hpp  PipeGroup.hpp  PseudoGUID.hpp  SOS.hpp
SOS/Core/src/: ClusterConfigFactory.cpp  Hub.cpp  NetworkNode.cpp  NetworkNode.spec.cpp  PseudoGUID.spec.cpp  SOS.cpp
SOS/HubFactories/: AllHubFactories.cpp
SOS/HubFactories/include/: AllHubFactories.hpp
SOS/HubFactories/src/: AllHubFactories.cpp
SOS/Nodes/include/: ActuatorLock.hpp  Locker.hpp  Router.hpp
SOS/Nodes/src/: ActuatorLock.cpp  ActuatorLock.spec.cpp  Router.cpp  demoNode.cpp
SOS/PipeFactories/: AllPipeFactories.cpp
SOS/PipeFactories/include/: AllPipeFactories.hpp
SOS/PipeFactories/src/: AllPipeFactories.cpp  AllPipeFactories.spec.cpp
SOS/cpp/: CMakeLists.txt  main.cpp  test_main.cpp
SOS/cpp/demo/: CMakeLists.txt  main.cpp
SOS/cpp/include/: Exit.hpp  Hub.hpp  IHub.hpp  Locker.hpp  Loopback.hpp  Message.hpp  Node.hpp  (+4 more)
Vision/: CMakeLists.txt  Capture.cpp  Capture.h  GateDetector.cpp  GateDetector.h  Thumbs.db  captureBuild.sh  captureMain.cpp  gateBuild.sh  gateDetectorMain.cpp
Vision/gate/: GateDetector.cpp  GateDetector.h  gateDetectMain.cpp  track.cpp
Vision/kernel/: DiveMaster.cpp
server/: CMakeLists.txt  RCServer.cpp  RCServer.hpp  RubyPrefix.rb  Server.cpp  SocketServer.cpp  clean.sh  compile.sh  compileRun.sh  extconf.rb  fixMakefile.sh  main.cpp
vision/: CMakeLists.txt  Houghcircles.cpp  README.md  ballfinder.sh  test_main.cpp  webcamShooter.sh
(+565 files in other folders)
