cmake_minimum_required (VERSION 3.1)
project (GateDetector)
include_directories(gate)
include_directories( ${OpenCV_INCLUDE_DIRS} )
file(GLOB_RECURSE SOURCE_FILES gate/gateDetectMain.cpp gate/GateDetector.cpp)
set (CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra")
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
find_package(OpenCV REQUIRED)
add_executable(gateDetector ${SOURCE_FILES})
target_link_libraries(gateDetector Threads::Threads)
target_link_libraries( gateDetector ${OpenCV_LIBS} )
